--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ input,button{
 .brand-header{
     color: white;
     font-size: 2.6rem;
-    margin: 4rem
+    margin: 2.5rem
 }
 .menu-setting > i {
     position: absolute;
@@ -104,7 +104,7 @@ input,button{
     transition: 250ms;
     transform: scale(1);
     font-size: 2.4rem;
-    padding: 1rem
+    padding: .5rem
 }
 .add-item i:active {
     transform: scale(.9);
@@ -260,11 +260,11 @@ li:hover .set-item :nth-child(3) {
 
 footer {
     background: white;
-    font-size: 1.2rem;
-    padding: 1rem;
-    color: rgb(255, 78, 78);
+    font-size: 1rem;
+    padding: 2px;
     position: fixed;
     bottom: 0;
     right: 0;
-    left: 0
+    left: 0;
+    color: darkslateblue
 }
