--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@ input,button{
     color: white;
     font-size: 2rem;
 }
+.btn-key-access > i {
+    position: absolute;
+    top: 1rem;
+    right: 4rem;
+    color: white;
+    font-size: 2rem;
+}
 .input-container {
     top: 0;
     bottom: 0;
