--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ li:hover .set-item :nth-child(3) {
 }
 
 .prompt-container {
-    background-color: black;
+    background-color: darkslateblue;
     z-index: 9999;
     position: fixed;
     top: 0;
@@ -280,31 +280,33 @@ li:hover .set-item :nth-child(3) {
 
 .prompt {
     background-color: white;
-    width: 400px;
+    width: 600px;
     display: flex;
     flex-direction: column;
-    max-width: 88vw;
-    padding: 2rem;
+    max-width: 96vw;
+    padding: 6rem;
     border-radius: 2px;
     gap: 2rem;
+    box-sizing: border-box;
 }
 
 .prompt input, .prompt .btn button {
     font-family: "BeVietnamPro-Medium";
-    background-color: black;
-    color: white;
+    background-color: #f5f5f5;
+    color: rgba(1, 1, 1, .35);
     padding: 1.5rem;
     border-radius: 2px;
     font-size: 2rem;
     text-align: center;
 }
 
-
 .prompt .btn button {
-    border-radius: 3px;
+    border-radius: 0;
     margin: 0 3px;
-    font-size: 1.3rem;
-    padding:  .7rem 1rem;
+    font-size: 1.4rem;
+    padding: .8rem 1.3rem;
+    background-color: #ff4e4e;
+    color: white;
 }
 
 footer {
